fix user avatar name on mobile, etc

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,3 +122,6 @@ nav ul a,
 .like-count {
   padding: 0 6px 3px;
 }
+@media (max-width: 600px) {
+  .chip > img { margin: 0 -12px; }
+}
